data/derived/comb/progs/unify/prog6518.ml.out
Characters 200-204:
  |Average(s,p)-> "(("+exprToString s+"+"+exprToString p+")/2"
                  ^^^^
Error: This expression has type string but an expression was expected of type
         int
